# illuvi-analytics

./: .gitignore  Cargo.toml  README.md
environment/: docker-compose.yaml  start-local-environment.sh  stop-local-environment.sh
environment/migrations/: V10__create_collection_table.sql  V11__add_price_and_currency_for_mint_table.sql  V12__populate_missing_coin_history.sql  V13__setup_indexes_and_mat_views.sql  V14__change_coin_history_unique_key.sql  V15__reading_more_projects.sql  V16__reading_more_projects2.sql  V17__create_deposit_and_withdrawal_tables.sql  V18__add_attribute_column_for_asset.sql  V19__add_image_for_mat_views.sql  V1__create_mint_table.sql  V20__add_events_view.sql  V21__add_blueprints_and_events.sql  V22__add_more_indexes_for_asset_metadata.sql  V2__create_asset_table.sql  V3__create_order_data_table.sql  V4__add_columns_for_order_data_table.sql  V5__create_transfer_table.sql  V6__add_columns_for_asset_table.sql  V7__create_coin_and_coin_history_tables.sql  V8__add_token_address_for_mint_table.sql  V9__add_transaction_id_for_order_data_table.sql
environment/release/: release-backend.sh  release-loader.sh  release-ui.sh
environment/release/logrotate/: illuvi-analytics  info
environment/release/nginx/: default  info
environment/release/systemd/: illuvi-analytics-backend-watcher.path  illuvi-analytics-backend-watcher.service  illuvi-analytics-backend.service  illuvi-analytics-loader.service  illuvi-analytics-loader.timer
loader/: Cargo.toml
loader/src/: api_reader.rs  db.rs  model.rs  utils.rs
loader/src/api_reader/: api_utils.rs  coingecko.rs  etherscan.rs  immutablex.rs  reader.rs
loader/src/api_reader/coingecko/: coins_reader.rs
loader/src/api_reader/etherscan/: transactions_reader.rs
loader/src/api_reader/immutablex/: assets_reader.rs  collection_reader.rs  deposits_reader.rs  enricher.rs  mints_reader.rs  orders_reader.rs  transfers_reader.rs  utils.rs  withdrawals_reader.rs
loader/src/db/: coingecko.rs  db_handler.rs  immutablex.rs
loader/src/db/coingecko/: coins_handler.rs  coins_history_handler.rs
loader/src/db/immutablex/: assets_handler.rs  collection_handler.rs  deposits_handler.rs  mints_handler.rs  orders_handler.rs  persistable.rs  transfers_handler.rs  withdrawals_handler.rs
loader/src/model/: coingecko.rs  etherscan.rs  immutablex.rs
loader/src/model/coingecko/: coin.rs  coin_history.rs
loader/src/model/etherscan/: token.rs  transaction.rs
loader/src/model/immutablex/: asset.rs  collection.rs  deposit.rs  mint.rs  order.rs  token.rs  trade.rs  transfer.rs  withdrawal.rs
loader/src/utils/: price_utils.rs
site/backend/: Cargo.toml
site/backend/src/: controller.rs  db.rs  main.rs
site/backend/src/controller/: assets_controller.rs  collection_controller.rs  mints_controller.rs  search_controller.rs  stats_controller.rs  vitals_controller.rs  wallet_controller.rs
site/backend/src/db/: assets_events_handler.rs  assets_handler.rs  collection_handler.rs  db_handler.rs  db_model.rs  mints_handler.rs  stats_handler.rs  vitals_handler.rs  wallet_events_handler.rs  wallet_handler.rs
site/model/: Cargo.toml
site/model/src/: model.rs
site/model/src/model/: asset.rs  collection.rs  mint.rs  price.rs  search.rs  stats.rs  trade.rs  transaction.rs  vitals.rs  wallet.rs
site/ui/: Cargo.toml  Trunk.toml  index.html  style.css
site/ui/src/: main.rs  route.rs  utils.rs  view.rs
site/ui/src/utils/: api_utils.rs  env_utils.rs  formatting_utils.rs  html_utils.rs  navigation_utils.rs  pagination_utils.rs
site/ui/src/view/: about.rs  asset.rs  collection.rs  common.rs  footer.rs  header.rs  home.rs  loading.rs  search.rs  wallet.rs
site/ui/src/view/asset/: accessories.rs  blueprint.rs  d1sk.rs  event.rs  events.rs  illuvitar.rs  image.rs  land.rs  order_data_view.rs  page.rs  title.rs
site/ui/src/view/collection/: common.rs  overview.rs  project.rs  stats.rs
site/ui/src/view/collection/common/: no_data.rs  trade_card.rs  trade_view.rs
site/ui/src/view/collection/overview/: mint.rs  page.rs  vitals.rs
site/ui/src/view/collection/stats/: page.rs  stats_view.rs  trade_volume_card.rs
site/ui/src/view/common/: events_table.rs  no_data.rs  transaction_view.rs  transactions_view.rs
site/ui/src/view/wallet/: events.rs  page.rs  wallet_data_view.rs
src/: api_reader.rs  db.rs  db_handler.rs  main.rs  mints_reader.rs  model.rs
src/api_reader/: api_utils.rs  assets_reader.rs  mints_reader.rs  orders_reader.rs  reader.rs  transfers_reader.rs  utils.rs
src/db/: assets_handler.rs  db_handler.rs  mints_handler.rs  orders_handler.rs  transfers_handler.rs
src/model/: asset.rs  mint.rs  order.rs  shared.rs  trade.rs  transfer.rs
src/utils/: env_utils.rs  price_utils.rs
