[package]
name = "illuvi-analytics-data-loader"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "illuvi-analytics"
path = "src/main.rs"

[dependencies]
log = "0.4.0"
env_logger = "0.10.0"
dotenvy = "0.15.6"
reqwest = { version = "0.11", features = ["json"] }
tokio = { version = "1.24.2", features = ["full"] }
futures = "0.3.25"
sqlx = { version = "0.6.2", features = [ "runtime-tokio-native-tls" , "postgres", "chrono" ] }
serde = { version = "1.0.152", features = ["derive"] }
async-trait = "0.1.64"