[package]
name = "illuvi-analytics-loader"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "illuvi-analytics"
path = "../loader/src/main.rs"

[dependencies]
log = "0.4.20"
env_logger = "0.10.0"
dotenvy = "0.15.7"
reqwest = { version = "0.11.18", features = ["json"] }
tokio = { version = "1.32.0", features = ["full"] }
futures = { version = "0.3.28"}
sqlx = { version = "0.7.1", features = [ "runtime-tokio-native-tls" , "postgres", "chrono", "json", "rust_decimal" ] }
serde = { version = "1.0.185", features = ["derive"] }
serde_json = "1.0.105"
async-trait = "0.1.73"
ethabi = "18.0.0"
rust_decimal = "1.31.0"
openssl = { version = "0.10.56", features = ["vendored"] }
