[package]
name = "illuvi-analytics-loader"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "illuvi-analytics"
path = "../loader/src/main.rs"

[dependencies]
log = "0.4.22"
env_logger = "0.11.5"
dotenvy = "0.15.7"
reqwest = { version = "0.12.9", features = ["json"] }
tokio = { version = "1.41.1", features = ["full"] }
futures = { version = "0.3.31"}
sqlx = { version = "0.8.2", features = [ "runtime-tokio-native-tls" , "postgres", "chrono", "json", "rust_decimal" ] }
serde = { version = "1.0.215", features = ["derive"] }
serde_json = "1.0.133"
async-trait = "0.1.83"
ethabi = "18.0.0"
rust_decimal = "1.36.0"
openssl = { version = "0.10.68", features = ["vendored"] }
