[package]
name = "illuvi-analytics-backend"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "illuvi-analytics-backend"
path = "src/main.rs"

[dependencies]
model = { path= "../model"}
log = "0.4.20"
env_logger = "0.10.0"
dotenvy = "0.15.7"
actix-web = "4.4.0"
actix-cors = "0.6.4"
serde = { version = "1.0.185", features = ["derive"] }
sqlx = { version = "0.7.1", features = [ "runtime-tokio-native-tls", "postgres", "chrono", "rust_decimal" ] }
openssl = { version = "0.10.56", features = ["vendored"] }