[package]
name = "illuvi-analytics-backend"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "illuvi-analytics-backend"
path = "src/main.rs"

[dependencies]
model = { path= "../model"}
log = "0.4.22"
env_logger = "0.11.5"
dotenvy = "0.15.7"
actix-web = "4.9.0"
actix-cors = "0.7.0"
serde = { version = "1.0.215", features = ["derive"] }
sqlx = { version = "0.8.2", features = [ "runtime-tokio-native-tls", "postgres", "chrono", "rust_decimal" ] }
openssl = { version = "0.10.68", features = ["vendored"] }